--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#1F5BF3</color>
+
+    <color name="colorPrimary">#7FB5FF</color>
     <color name="colorPrimaryDark">#0947E8</color>
     <color name="colorAccent">#00A5FF</color>
     <!-- colors for modern ui -->
