--- a/app/src/main/res/layout/activity_doctor_signup.xml
+++ b/app/src/main/res/layout/activity_doctor_signup.xml
@@ -21,7 +21,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/doctorName"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
@@ -36,7 +36,7 @@
         android:layout_marginEnd="20dp"/>
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/doctorEmail"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
@@ -51,7 +51,7 @@
         android:layout_marginEnd="20dp"/>
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/doctorPassword"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
@@ -66,11 +66,11 @@
         android:layout_marginEnd="20dp"/>
 
     <Spinner
-        android:id="@+id/designation"
+        android:id="@+id/doctorDesignation"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="@drawable/round_back_dark_blue5_15"
         android:hint="Designation"
+        android:background="@drawable/round_back_dark_blue5_15"
         android:maxLines="1"
         android:inputType="text"
         android:textSize="16sp"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="20dp"/>
 
     <Spinner
-        android:id="@+id/specialization"
+        android:id="@+id/doctorSpecialization"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
@@ -96,6 +96,7 @@
         android:layout_marginEnd="20dp"/>
 
     <Button
+        android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
