--- a/app/src/main/res/layout/activity_sigin.xml
+++ b/app/src/main/res/layout/activity_sigin.xml
@@ -19,13 +19,13 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/login_email"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
-        android:hint="Username"
+        android:hint="Email"
         android:maxLines="1"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:textSize="16sp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
@@ -34,7 +34,7 @@
         android:layout_marginEnd="20dp"/>
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/login_password"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
@@ -49,6 +49,7 @@
         android:layout_marginEnd="20dp"/>
 
     <Button
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In"
