--- a/app/src/main/res/layout/activity_doctor_signup.xml
+++ b/app/src/main/res/layout/activity_doctor_signup.xml
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/round_back_dark_blue5_15"
-        android:hint="Specialization"
+
         android:maxLines="1"
         android:inputType="text"
         android:textSize="16sp"
@@ -94,6 +94,29 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an Account? "
+            />
+        <TextView
+            android:id="@+id/toSignIn"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="  Sign in"
+            />
+    </LinearLayout>
 
     <Button
         android:id="@+id/registerButton"
