--- a/app/src/main/res/layout/activity_user_signup.xml
+++ b/app/src/main/res/layout/activity_user_signup.xml
@@ -143,6 +143,29 @@
                 />
         </RadioGroup>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an Account? "
+            />
+        <TextView
+            android:id="@+id/toSignIn"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="  Sign in"
+            />
+    </LinearLayout>
+
     <Button
         android:id="@+id/user_signup_button"
         android:layout_width="wrap_content"
