--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#2196F3</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="colorPrimary">#7FB5FF</color>
-    <color name="colorPrimaryDark">#0947E8</color>
+    <color name="colorPrimaryDark">#39B8F3</color>
     <color name="colorAccent">#00A5FF</color>
     <!-- colors for modern ui -->
     <color name="whiteTextColor">#fff</color>
