--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,10 @@
 
     <color name="bg1">#6FCDCDCD</color>
     <color name="bg2">#6FE6E6E6</color>
+
+    <color name="accept">#70CDFFC</color>
+    <color name="decline">#6FCDCDCD</color>
+    <color name="wait">#70CDFFF5</color>
     <color name="loginBkColor">#f0f0f0</color>
-    <!-- colros for card -->
     <color name="whiteCardColor">#fff</color>
 </resources>
