resolved bug in appointment adapter

--- a/app/src/main/res/layout/fragment_user_home_page.xml
+++ b/app/src/main/res/layout/fragment_user_home_page.xml
@@ -66,7 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="360dp"
                     android:padding="10dp"
-                    android:background="@color/bg2">
+                    android:background="@color/white">
                 </ListView>
     </LinearLayout>
 
