--- a/app/src/main/res/layout/appointment_card.xml
+++ b/app/src/main/res/layout/appointment_card.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!-- Accept #70CDFFCD-->
+<!-- Decline #70FFCDCF-->
+<!-- Wait #70CDFFF5-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:id="@+id/appointment_card"
