--- a/app/src/main/res/layout/fragment_user_home_page.xml
+++ b/app/src/main/res/layout/fragment_user_home_page.xml
@@ -59,7 +59,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_baseline_add_circle_outline_24" />
+                android:src="@drawable/add_circle" />
         </LinearLayout>
                 <ListView
                     android:id="@+id/user_appointment_list_view"
