--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,16 +13,16 @@
     <color name="colorAccent">#00A5FF</color>
     <!-- colors for modern ui -->
     <color name="whiteTextColor">#fff</color>
-    <color name="textColor1">#606060</color>
-    <color name="textColor2">#919191</color>
+    <color name="textColor1">#333333</color>
+    <color name="textColor2">#5A5A5A</color>
     <color name="textColorMain">#2196F3</color>
 
     <color name="bg1">#6FCDCDCD</color>
     <color name="bg2">#6FE6E6E6</color>
 
-    <color name="accept">#6F529E36</color>
-    <color name="decline">#6F9E3636</color>
-    <color name="wait">#6F9E8736</color>
+    <color name="accept">#529E36</color>
+    <color name="decline">#9E3636</color>
+    <color name="wait">#9E8736</color>
     <color name="loginBkColor">#f0f0f0</color>
     <color name="whiteCardColor">#fff</color>
 </resources>
