--- a/app/src/main/res/layout/activity_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_appointment_detail.xml
@@ -17,23 +17,61 @@
         android:textColor="@color/textColor1"
         android:textSize="30sp"
         android:padding="5dp"
-        android:text="Appointment"/>
-    <LinearLayout
+        android:text="Appointment Card"/>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        <TextView
+        app:cardCornerRadius="6dp"
+        app:cardElevation="10dp"
+        app:cardMaxElevation="12dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        android:paddingBottom="5dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Doctor:"
-            android:textSize="18dp"/>
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="30dp"
+                android:paddingLeft="10dp"
+                android:text="Doctor:"
+                android:textSize="18dp"/>
 
-        <TextView
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:textColor="@color/textColor1"
+                android:text="Doctor:"
+                android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Doctor:"
-            android:textSize="25dp"/>
-    </LinearLayout>
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="30dp"
+                android:paddingLeft="10dp"
+                android:text="Doctor:"
+                android:textSize="18dp"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:textColor="@color/textColor1"
+                android:text="Doctor:"
+                android:textSize="25dp"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
