--- a/app/src/main/res/layout/appointment_card.xml
+++ b/app/src/main/res/layout/appointment_card.xml
@@ -6,11 +6,9 @@
     android:orientation="horizontal"
     android:id="@+id/appointment_card"
     android:layout_width="match_parent"
-    android:background="#70CDFFF5"
     android:padding="6dp"
     android:layout_weight="11"
     android:layout_height="75dp">
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dentist"
-            android:textColor="#606060"
+            android:textColor="@color/textColor1"
             android:textSize="20dp"
             android:textStyle="bold" />
 
