--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".MainActivity"
+        android:background="@drawable/ic_wave"
         tools:ignore="HardcodedText">
 
         <ScrollView
@@ -30,7 +31,7 @@
                     android:layout_marginBottom="30dp"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor1"
                     android:text="Profile"
                     android:textSize="25dp"/>
 
@@ -59,7 +60,7 @@
                         android:layout_marginTop="18dp"
                         android:layout_height="match_parent"
                         android:text="Name"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textColor1"
                         android:enabled="false"
                         android:maxLines="1"
                         android:inputType="text"
@@ -90,7 +91,7 @@
                         android:layout_marginTop="18dp"
                         android:layout_height="match_parent"
                         android:text="Date Of Birth"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textColor1"
                         android:enabled="false"
                         android:maxLines="1"
                         android:inputType="date"
@@ -122,7 +123,7 @@
                         android:layout_height="match_parent"
                         android:text="Email"
                         android:enabled="false"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textColor1"
                         android:maxLines="1"
                         android:inputType="textEmailAddress"
                         android:textSize="16sp"
@@ -151,7 +152,7 @@
                         android:layout_marginTop="18dp"
                         android:layout_height="match_parent"
                         android:text="Phone Number"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textColor1"
                         android:maxLines="1"
                         android:inputType="number"
                         android:enabled="false"
