--- a/app/src/main/res/layout/doctor_card.xml
+++ b/app/src/main/res/layout/doctor_card.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:orientation="vertical"
-        android:padding="20dp"
-
+        android:padding="10dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -30,4 +26,3 @@
             android:text="5 stars"
             android:textSize="18dp" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
